2005-03-19 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	Instruction set cleanup: one instruction INST_YES (not-not) added,
	removal of unused instructions (66 are left), renumbering to ease
	the code of the optimiser. Instructions that are logical negation
	of each other (eg INST_LE and INST_GT) are numbered in pairs
	(2n)(2n+1) to permit negation by bit-flipping (^1).
	
2005-03-19 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompExpr.c:
	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	Massive reduction of variable-related instructions: INST_LOAD,
	INST_STORE and INST_INCR perform the work of the 20 previous
	INST_LOAD_*, INST_STORE_*, INST_APPEND_*, INST_LAPPEND_* and
	INST_INCR_*. Variants, indices and immediate values are packed in
	the operand (note that performance considerations may later cause
	some changes here). This is an intermediate commit: the INST
	numbering is still unchanged, with gaping holes for the removed
	instructions. 
	Improved stack depth estimates in tclCompCmds.c.		

2005-03-16 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.h:
	Fixing some stupidities in the bitwise ops and limits for the
	packed version - it was all wrong, but only managed to show itself
	in a failure of clock-2.1464 (thanks dgp).

2005-03-16 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.h:
	Enabled new packed mode: (inst+opnd) are packed in 32 bits. To
	enable, set the env var 
	   CFLAGS_DEBUG="-DVM_USE_PACKED" (resp "-g -DVM_USE_PACKED")
	for the call to 'make'. If the flag is not set uses the wordcodes,
	where (inst+opnd) take the  size of 2 pointers.

2005-03-15 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	Macro reorganisation, preparing to enable the 8+24 version.
	
2005-03-15  Don Porter  <dgp@users.sourceforge.net>
